maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: not found: value ym
          else if ((y+1<ym) && !aMurNord(x,y+1) && (getIndication(x,y+1)==9999)) {
                        ^JediEscaper:26: error: not found: value xm
          else if ((x+1<xm) && !aMurOuest(x+1,y) && (getIndication(x+1,y)==9999)) {
                        ^